--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "langgraph>=0.5.4",
     "langgraph-api>=0.2.100",
     "langgraph-cli>=0.3.5",
+    "openai-whisper>=20250625",
     "pandas>=2.3.1",
     "requests>=2.32.4",
     "wikipedia>=1.4.0",
