--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "openai-whisper>=20250625",
     "pandas>=2.3.1",
     "requests>=2.32.4",
+    "tavily-python>=0.7.10",
     "wikipedia>=1.4.0",
     "youtube-transcript-api>=1.2.1",
 ]
