--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "debugpy>=1.8.15",
-    "gradio>=5.38.0",
+    "fastapi[standart]>=0.116.1",
+    "gradio>=5.42.0",
     "langchain-community>=0.3.27",
     "langchain-ollama>=0.3.6",
     "langchain-tavily>=0.2.10",
@@ -16,7 +17,9 @@ dependencies = [
     "openai-whisper>=20250625",
     "openpyxl>=3.1.5",
     "pandas>=2.3.1",
+    "pytube>=15.0.0",
     "requests>=2.32.4",
+    "starlette-session-middleware>=0.1.3",
     "tavily-python>=0.7.10",
     "wikipedia>=1.4.0",
     "youtube-transcript-api>=1.2.1",
