Add new packages and update dependencies in uv.lock
- Added asttokens version 3.0.0
- Added decorator version 5.2.1
- Added executing version 2.2.0
- Added ipython version 9.4.0 and its dependencies
- Added ipython-pygments-lexers version 1.1.1
- Added jedi version 0.19.2
- Added matplotlib-inline version 0.1.7
- Added parso version 0.8.4
- Added pexpect version 4.9.0
- Added pure-eval version 0.2.3
- Added stack-data version 0.6.3
- Added traitlets version 5.14.3
- Added wcwidth version 0.2.13
- Updated requires-dist to include ipython with version >=9.4.0
- Updated dependencies for existing packages

Also added a new workflow image file.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "debugpy>=1.8.15",
     "fastapi[standart]>=0.116.1",
     "gradio>=5.42.0",
+    "ipython>=9.4.0",
     "langchain-community>=0.3.27",
     "langchain-ollama>=0.3.6",
     "langchain-tavily>=0.2.10",
